Services sub-pages created

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@types/csv-parse": "^1.2.2",
     "@types/formidable": "^3.4.5",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +25,7 @@
     "formidable": "^3.5.1",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "papaparse": "^5.4.1",
     "pg": "^8.12.0",
     "react": "^18",
