--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formidable": "^3.5.1",
     "json2csv": "^6.0.0-alpha.2",
     "lucide-react": "^0.396.0",
+    "mongodb": "^6.8.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "papaparse": "^5.4.1",
@@ -40,6 +41,7 @@
     "react-social-icons": "^6.16.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -48,6 +50,7 @@
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
