--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "csv-parse": "^5.5.6",
     "formidable": "^3.5.1",
+    "framer-motion": "^11.2.13",
     "json2csv": "^6.0.0-alpha.2",
     "lucide-react": "^0.396.0",
     "mongodb": "^6.8.0",
