--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tabler/icons-react": "^3.9.0",
     "@types/csv-parse": "^1.2.2",
     "@types/formidable": "^3.4.5",
     "axios": "^1.7.2",
