--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "csv-parse": "^5.5.6",
+    "date-fns": "^3.6.0",
     "formidable": "^3.5.1",
     "framer-motion": "^11.2.13",
     "json2csv": "^6.0.0-alpha.2",
