--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tabler/icons-react": "^3.9.0",
     "@types/csv-parse": "^1.2.2",
     "@types/formidable": "^3.4.5",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
