--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongodb": "^6.8.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "node-fetch": "^3.3.2",
     "papaparse": "^5.4.1",
     "pg": "^8.12.0",
     "react": "^18",
